Insercion correcta de prueba